# indexing

./: .travis.yml  Cargo.toml  README.md  README.rst  algorithms.rs  index.html  index_error.rs  indexing.rs  pointer.rs  search-index.js
benches/: bench.rs  binary_search.rs  merge.rs  quicksort.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.IntoIterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Index.js  trait.IndexMut.js
implementors/indexing/: trait.ProofAdd.js
implementors/std/error/: trait.Error.js
indexing/: IndexingError.t.html  IntoCheckedRange.t.html  NonEmpty.t.html  ProofAdd.t.html  Subdivide.t.html  Unknown.t.html  enum.NonEmpty.html  enum.Unknown.html  fn.indices.html  index.html  sidebar-items.js  struct.Container.html  struct.Index.html  struct.IndexingError.html  struct.Range.html  struct.RangeIter.html  struct.Subdivide.html  trait.Buffer.html  trait.BufferMut.html  trait.IntoCheckedRange.html  trait.ProofAdd.html
indexing/algorithms/: fn.binary_search.html  fn.heapify.html  fn.insertion_sort_indexes.html  fn.insertion_sort_pointerindex.html  fn.insertion_sort_ranges.html  fn.insertion_sort_rust.html  fn.merge_internal_indices.html  fn.merge_internal_ranges.html  fn.quicksort.html  fn.quicksort_bounds.html  heapify.v.html  index.html  insertion_sort_indexes.v.html  insertion_sort_pointerindex.v.html  insertion_sort_ranges.v.html  insertion_sort_rust.v.html  merge_internal_indices.v.html  merge_internal_ranges.v.html  quicksort_bounds.v.html  sidebar-items.js  trait.Data.html
indexing/index_error/: struct.IndexingError.html
src/: algorithms.rs  base.rs  container.rs  container_traits.rs  index_error.rs  indexing.rs  lib.rs  macro_utils.rs  pointer.rs  pointer_ext.rs  prelude.rs  proof.rs
src/indexing/: algorithms.rs.html  index_error.rs.html  indexing.rs.html  pointer.rs.html
tests/: compiletest.rs  tests.rs  vec.rs
tests/compile-fail/: basic-branding-pointers.rs  basic-branding.rs  basic-branding2.rs  join-proof-add.rs  join_cover.rs  multiborrow.rs  pointers-deref.rs  twin-pointers.rs
