[package]
name = "indexing"
version = "0.4.1"
authors = ["bluss"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/indexing"
documentation = "https://docs.rs/indexing"

description = "Sound unchecked indexing using “generativity”; a type system approach to indices, pointers and ranges that are trusted to be in bounds."

keywords = ["data-structure", "generativity", "lower-bound", "no_std"]
categories = ["no-std", "rust-patterns"]

[lib]

[dependencies]
compiletest_rs = { version = "0.3.17", optional = true }

[dev-dependencies]
rand = "0.7"
quickcheck = { version = "0.9", default-features = false }

[features]
default = ["use_std"]
# Turn off std to use `no_std`
use_std = []

experimental_pointer_ranges = []
test_compiletest = ["compiletest_rs"]

[profile.bench]
#debug = true

[package.metadata.release]
no-dev-version = true
